# query-plan

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: cost.rs  enumerate.rs  join.rs  lib.rs  optimize.rs  plan.rs
